Mon Aug  1 14:26:51 1994  Steve Haflich  (smh@vapor)

	* clman.c: Use netinet/in.h macros to hack binary data on
	byte-order-challenged hosts.

	* fi-basic-lep.el: New fi::show-error-text handler
        to report lep transaction errors to avoid overflowing minibuffer.

	* fi-composer.el: Use fi::show-error-text.

	* fi-changes.el: Fix broken fi:compare-source-files.

	* fi-dmode.el: Add binding of lep::inverse-definitions for FSF 19.
	When known, show the file containing the definition.

	* fi-emacs19.el: First poublic release of FSF Emacs 19 menu bars,
	which were also massively reorganized for this release.

	* fi-keys.el: Fix region commenting.

	* fi-lemacs.el: Reorganization of menubars.  Disable more commands when
	inappropriate.

	* fi-lep.el: Use fi::show-error-text.
	  Fix fi::lisp-complete-1 to protect against recursive invocation by mouse
	  motion.  This would cause Lemacs to freeze, requiring many ^G to recover.
	  Rename lep::my-find-file to lep::find-file.
	  Added lep::write-string-to-hidden-buffer for future use.
	  Unconfuse fi:compile-file from fi:compile-and-load-file.

	* fi-lze.el:
	  Wrap a format around buffer-substring to bypass the incredible bogosity
	  that FSF 19 doesn't print fintified strings as strings.

	* fi-site-init.el:
	  Bump version number to 2.0.12.

	* fi-stream.el:
	  Recenter after possing up a new listener.  Otherwise FSF 19.23 initially
	  scrolls below the entire extent of the buffer.

	* fi-sublisp.el:
	  Add code for fi:show-run-status.  See gc-mode-line.cl for details.

	* fi-subproc.el: Variable fi::common-lisp-connection-type contains
	  the connection-type for sublisp buffers.  The problem sending
	  long lines (> 255 chars) down a pty is fixed.
	  Change "sh" to "exec" to eliminate one process in remote execute chain.

Mon Jun 13 15:42:15 1994  George Jacob  (georgej@lava)

	* fi-site-init.el: (setq initialization-forms nil), for lemacs19.10

	* fi-emacs19.el: Modified "require lmenu" for versions > 22
